[gd_scene load_steps=2 format=3 uid="uid://88e0gjy3ep62"]

[ext_resource type="Script" uid="uid://cvx12dmf0noom" path="res://atividadeforms/forms.gd" id="1_a5f5b"]

[node name="Forms" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a5f5b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 268.0
offset_top = 101.0
offset_right = 341.0
offset_bottom = 206.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="LineEditNome" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
placeholder_text = "name"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="LineEditIdade" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
placeholder_text = "age"

[node name="button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
text = "press"

[node name="ResultadoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/button" to="." method="_on_button_pressed"]
